fix checkbox aligning

--- a/es/MkTable/FilterDropDown/CheckFilter/style/style.less
+++ b/es/MkTable/FilterDropDown/CheckFilter/style/style.less
@@ -29,12 +29,16 @@
     }
     .pin-item {
         display: flex;
+        align-items: center;
         &:hover{
             background-color: @lighter-background;
         }
         span + span {
             overflow: hidden;
             text-overflow: ellipsis;
+        }
+        .ant-checkbox {
+            top: -.06em;
         }
     }
     .pin-footer {
